--- a/AdRule.conf
+++ b/AdRule.conf
@@ -18,7 +18,7 @@
 // ==/UserScript==
 
 
-hostname=api.vistopia.com.cn, pss.txffp.com, api.pinduoduo.com, api.yangkeduo.com, m.sd.10086.cn, gw.alicdn.com, helper.2bulu.com, 47.100.65.202, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, new.vip.weibo.cn, wap.js.10086.cn, tagit.hyhuo.com, top-widgets-api.xiaozujian.com, tel.mangaapi.manhuaren.com, apis.lifeweek.com.cn, support.you.163.com, yanxuan.nosdn.127.net, *.peopleapp.com, api-mifit-sg2.huami.com, new-app-api.ylyk.com, gw.aihuishou.com, *.58cdn.com.cn, app.58.com, acs.m.taobao.com, static.zhihu.com, creditcardapp.bankcomm.com, res.xiaojukeji.com, 116.85.2.15, 116.85.2.14, lchttpapi.xczim.com, business.msstatic.com, mangaapi.manhuaren.com, api.gotokeep.com, api.kkmh.com, *.chelaile.net.cn, api-mifit.huami.com, api.jr.mi.com, api.m.mi.com, guanyu.longfor.com, pages.xiaohongshu.com, www.xiaohongshu.com, gw.alicdn.com, elemecdn.com, fuss10.elemecdn.com, www1.elecfans.com, m.tuniu.com, consumer.fcbox.com, mapi.mafengwo.cn, api.xiaoyi.com, api.douban.com, otheve.beacon.qq.com, mapi.sfbest.com, m5.amap.com, capi.mwee.cn, sso.ifanr.com, s3plus.meituan.net,flowplus.meituan.net, p*.meituan.net, img.meituan.net, testflight.apple.com, rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn, v.icbc.com.cn, ms.jr.jd.com, wmapi.meituan.com, appconf.mail.163.com, business.msstatic.com, dl-cu-hz.lechange.cn, bdsp-x.jd.com, dsp-x.jd.com, api.m.jd.com, fbchina.flipchina.cn, zone.guiderank-app.com,ad.12306.cn, homefront.qunar.com, afd.baidu.com, *.bdstatic.com, j-image.missfresh.cn, ma-adx.ctrip.com, m.ctrip.com, mbd.baidu.com, img.rr.tv, api.rr.tv, capis.didapinche.com,capis*.didapinche.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com, *.hoopchina.com,goblin.hupu.com,spclient.wg.spotify.com,
+hostname=api.vistopia.com.cn, pss.txffp.com, api.pinduoduo.com, api.yangkeduo.com, m.sd.10086.cn, gw.alicdn.com, helper.2bulu.com, 47.100.65.202, wap.js.10086.cn, tagit.hyhuo.com, top-widgets-api.xiaozujian.com, tel.mangaapi.manhuaren.com, apis.lifeweek.com.cn, support.you.163.com, yanxuan.nosdn.127.net, *.peopleapp.com, api-mifit-sg2.huami.com, new-app-api.ylyk.com, gw.aihuishou.com, *.58cdn.com.cn, app.58.com, acs.m.taobao.com, static.zhihu.com, creditcardapp.bankcomm.com, res.xiaojukeji.com, 116.85.2.15, 116.85.2.14, lchttpapi.xczim.com, business.msstatic.com, mangaapi.manhuaren.com, api.gotokeep.com, api.kkmh.com, *.chelaile.net.cn, api-mifit.huami.com, api.jr.mi.com, api.m.mi.com, guanyu.longfor.com, pages.xiaohongshu.com, www.xiaohongshu.com, gw.alicdn.com, elemecdn.com, fuss10.elemecdn.com, www1.elecfans.com, m.tuniu.com, consumer.fcbox.com, mapi.mafengwo.cn, api.xiaoyi.com, api.douban.com, otheve.beacon.qq.com, mapi.sfbest.com, m5.amap.com, capi.mwee.cn, sso.ifanr.com, s3plus.meituan.net,flowplus.meituan.net, p*.meituan.net, img.meituan.net, rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn, v.icbc.com.cn, ms.jr.jd.com, wmapi.meituan.com, appconf.mail.163.com, business.msstatic.com, dl-cu-hz.lechange.cn, bdsp-x.jd.com, dsp-x.jd.com, api.m.jd.com, fbchina.flipchina.cn, zone.guiderank-app.com,ad.12306.cn, homefront.qunar.com, afd.baidu.com, *.bdstatic.com, j-image.missfresh.cn, ma-adx.ctrip.com, m.ctrip.com, mbd.baidu.com, img.rr.tv, api.rr.tv, capis.didapinche.com,capis*.didapinche.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com, *.hoopchina.com,goblin.hupu.com,spclient.wg.spotify.com,
 
 
 # > 074 看理想 - api.vistopia.com.cn
@@ -54,15 +54,6 @@ https://helper.2bulu.com/outing/reqIndex url reject-dict
 ^https?:\/\/47\.100\.65\.202\/api\/mobile\/index\.php\?version=\d&mobile=yes&module=basicdata&type=forumlist url response-body adv response-body ddgksf2013
 ^https?:\/\/47\.100\.65\.202\/source\/plugin\/mobile\/mobile\.php\?module=threadpost&.+?&page=1 url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/fly.js
 
-# > 067 微博去廣告以及去除各部分推廣@zmqcherish
-# ④ weibo adblock - cherish
-^https?://m?api\.weibo\.c(n|om)/2/(cardlist|searchall|page|statuses/(unread_)?friends(/|_)timeline|groups/timeline|statuses/(unread_hot_timeline|extend|video_mixtimeline)|profile/(me|statuses)|video/(community_tab|remind_info|tiny_stream_video_list)|checkin/show|\!/live/media_homelist|comments/build_comments|container/get_item) url script-response-body https://raw.githubusercontent.com/zmqcherish/proxy-script/main/weibo_main.js
-# ③ 刪除微博開屏廣告 - cherish
-^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/zmqcherish/proxy-script/main/weibo_launch.js
-# ② 自定義tab皮膚 - cherish
-^https://api.weibo.cn/2/!/client/light_skin url script-response-body https://raw.githubusercontent.com/zmqcherish/proxy-script/main/weibo_main.js
-# ① 非會員設置tab皮膚 - cherish
-^https://new.vip.weibo.cn/littleskin/preview url script-response-body https://raw.githubusercontent.com/zmqcherish/proxy-script/main/weibo_main.js
 
 # > 66 江蘇移動10086（需卸載重裝）@ddgksf2013
 ^https?+:\/\/wap\.js\.10086\.cn\/jsmccClient\/cd\/market_content\/api\/v\d\/market_content\.page\.query url reject-200
@@ -223,9 +214,6 @@ https://guanyu.longfor.com/app-server/api/v1/main/start url reject
 
 # > 26 網易嚴選@ddgksf2013
 ;https://support.you.163.com/appversync/check.do url reject
-
-# > 25 解除國區TF下載限制
-^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*" request-body storefrontId" : "143441-1,29"
 
 # > 24 酷我音樂去開屏廣告 - rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn
 ^https?:\/\/rich\.kuwo\.cn\/AdService\/kaiping\/.+ url reject
